--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(255, 255, 255, 0.6);
     padding: 40px;
     border-radius: 15px;
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
@@ -23,7 +23,7 @@ body {
 }
 
 h1 {
-    color: #D4AF37; /* Rich gold, like The Hobbit movie title */
+    color: #fbf6e6; /* Rich gold, like The Hobbit movie title */
     font-size: 3em;
     font-family: 'Cinzel Decorative', serif;
     text-transform: uppercase;
