--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -23,30 +23,39 @@
         </div>
 
       </nav>
-  <header>
-        <h1>Hike Details</h1>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/all">Overview</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <% for(let i=0; i < trailPosts.length; i++){ %>
-      <div class="card" style="width: 18rem;">
-        <img src="<%= trailPosts[i].imageUrl %>" class="card-img-top" >
-        <div class="card-body">
-          <h5 class="card-title"><%= trailPosts[i].username %></h5>
+    
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <% for (let j = 0; j < trailPosts.length; j++) { %>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="<%= j %>" class="<%= j === 0 ? 'active' : '' %>" aria-label="Slide <%= j + 1 %>"></button>
+          <% } %>
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item"><%= trailPosts[i].mountainName %></li>
-          <li class="list-group-item"><%= trailPosts[i].yearHiked %></li>
-          <li class="list-group-item"><%= trailPosts[i].location %></li>    
-          <li class="list-group-item"><%= trailPosts[i].distance %> Miles</li>
-        </ul>
+        <div class="carousel-inner">
+          <% for (let j = 0; j < trailPosts.length; j++) { %>
+            <div class="carousel-item <%= j === 0 ? 'active' : '' %>">
+              <img src="<%= trailPosts[j].imageUrl %>" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5><%= trailPosts[j].username %></h5>
+                <p><%= trailPosts[j].mountainName %></p>
+                <p><%= trailPosts[j].yearHiked %></p>
+                <p><%= trailPosts[j].location %></p>
+                <p><%= trailPosts[j].distance %> Miles</p>
+                <a href="<%= trailPosts[j].path %>" class="btn btn-primary">Learn more about <%= trailPosts[j].username %>'s experience </a>
+              </div>
+            </div>
+          <% } %>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-           <% } %>
+    <!-- I used chatgpt here to make the carousel work as properly https://chatgpt.com/share/67a2c985-a8f0-8011-93c4-1ef91d1bd51b -->
   
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
